@@ -37,9 +37,9 @@ homepage:
         - title: "What's New"
           summary: Check out the latest Hybrid Cloud, Virtual Desktop and Containers solutions
           url: hc-whatsnew.html
-#        - title: "Videos and Demos"
-#          summary: Short videos / demos for Hybrid Cloud, Virtualization and Containers features
-#          url: hc-videos.html
+        - title: "Videos and Demos"
+          summary: Short videos / demos for Hybrid Cloud, Virtualization and Containers features
+          url: hc-videos.html
 #        - title: "Blogs"
 #          summary: Technical blogs highlighting Hybrid Cloud, Virtualization and Containers features
 #          url: hc-blogs.html
